--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
     "version": "1.0.0",
     "description": "Create Chrome extension boilerplates with React, Vue, or JavaScript",
     "main": "index.js",
+    "homepage": "https://github.com/akii09/Extify#readme",
+    "bugs": {
+        "url": "https://github.com/akii09/Extify/issues"
+      },
+      "repository": {
+        "type": "git",
+        "url": "git+https://github.com/akii09/Extify.git"
+      },
     "generator": {
       "template": ".",
       "prompts": "prompts.js"
