--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-    "name": "extensio_gen",
-    "version": "1.0.0",
+    "name": "create-extensio-gen",
+    "version": "1.1.104",
     "description": "Create Chrome extension boilerplates with React, Vue, or JavaScript",
+    "bin": {
+        "create-extensio-gen": "./bin/index.js"
+      },
+      "files": [
+        "outfile.cjs"
+      ],
     "main": "index.js",
-    "homepage": "https://github.com/akii09/Extify#readme",
+    "homepage": "https://github.com/akii09/extensioGen#readme",
     "bugs": {
-        "url": "https://github.com/akii09/Extify/issues"
-      },
-      "repository": {
+        "url": "https://github.com/akii09/extensioGen/issues"
+    },
+    "repository": {
         "type": "git",
-        "url": "git+https://github.com/akii09/Extify.git"
-      },
+        "url": "git+https://github.com/akii09/extensioGen.git"
+    },
     "generator": {
-      "template": ".",
-      "prompts": "prompts.js"
+        "template": ".",
+        "prompts": "prompts.js"
     },
     "scripts": {
-      "test": "jest",
-      "prepublish": "npm run test",
-      "extension_gen": "node createProject.js"
+        "test": "jest",
+        "prepublish": "npm link"
     },
     "keywords": [
-      "chrome",
-      "extension",
-      "boilerplate",
-      "react",
-      "vue",
-      "javascript"
+        "chrome",
+        "extension",
+        "boilerplate",
+        "react",
+        "vue",
+        "javascript"
     ],
     "license": "MIT",
     "dependencies": {
-      "inquirer": "^9.1.0",
-      "fs-extra": "^10.1.0"
+        "chalk": "^5.3.0",
+        "child_process": "^1.0.2",
+        "fs-extra": "^10.1.0",
+        "inquirer": "^9.2.17"
     },
-    "devDependencies": { 
-      "jest": "^28.0.1"
+    "devDependencies": {
+        "jest": "^28.0.1"
     }
-  }
-  
+}
