--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "files": [
         "outfile.cjs"
     ],
+    "type": "module",
     "main": "index.js",
     "homepage": "https://github.com/akii09/extensioGen#readme",
     "bugs": {
@@ -38,7 +39,7 @@
         "chalk": "^5.3.0",
         "child_process": "^1.0.2",
         "fs-extra": "^10.1.0",
-        "inquirer": "^9.2.17"
+        "inquirer": "^7.3.3"
     },
     "devDependencies": {
         "jest": "^28.0.1"
