Update prepublish script in package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "scripts": {
         "test": "jest",
-        "prepublish": "npm link"
+        "prepublishOnly": "npm link"
     },
     "keywords": [
         "chrome",
